<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">An Unofficial Guide To GOT</string>
    <string name="mCharacters">Lannisters</string>
    <string name="starks">Starks</string>
    <string name="grey">Greyjoy</string>
    <string name="tyrell">Tyrell</string>
    <string name="gHouses">Current Great Houses</string>
    <string name="eHouses">Exiled Great Houses</string>
    <string name="extinct">Extinct Great Houses</string>
    <string name="ArrHeader">House Arryn</string>
    <string name="Arryn">HOUSE ARRYN</string>
    <string name="BarHeader">House Baratheon</string>
    <string name="HisHeader">History</string>
    <string name="BolHeader">House Bolton</string>
    <string name="BaeHeader">House Baelish</string>
    <string name="GreyHeader">House Greyjoy</string>
    <string name="LanHeader">House Lannister</string>
    <string name="MarHeader">House Martell</string>
    <string name="TyHeader">House Tyrell</string>
    <string name="MemHeaders">Members</string>
    <string name="StaHeader">House Stark</string>
    <string name="TarHeader">House Targaryen</string>
    <string name="TullHeader">House Tully</string>
    <string name="DurHeader">House Durrandon</string>
    <string name="GarHeader">House Gardener</string>
    <string name="HoaHeader">House Hoare</string>
    <string name="AryaHeader">Arya Stark</string>
    <string name="FirstHeader">The First Men</string>
    <string name="childHeader"> The Children of the Forest</string>
    <string name="longHeader">The Long Night</string>
    <string name="andalHeader">The Andals and The Invasion </string>
    <string name="valyHeader">Valyria and The Century of Blood</string>
    <string name="TarConqHeader">The Targaryren Conquest</string>
    <string name="TarDyHeader">The Targaryen Dynasty</string>
    <string name="RobRebHeader">Roberts Rebellion</string>
    <string name="reHeader">RELIGION</string>
    <string name="peHeader">PEOPLE</string>
    <string name="cuHeader">CUSTOMS</string>
    <string name="curHeader">LANGUAGES</string>
    <string name="paHeader">PARLEY</string>
    <string name="whiteHeader">White Walkers</string>
    <string name="draHeader">Dragons</string>
    <string name="wiHeader">Wights</string>
    <string name="giantHeader">Giants</string>
    <string name="mantiHeader">Manticores</string>
    <string name="valSteelHeader">Valyrian Steel</string>
    <string name="milkHeader">Milk Of The Poppy</string>
    <string name="wildHeader">Wildfire</string>
    <string name="draGlass">Dragon Glass</string>
    <string name="weirHeader">Weirwood</string>
    <string name="stranHeader">The Strangler</string>
    <string name="otherHeader">Others</string>
    <string name="brann_stark">BRANN STARK</string>
    <string name="gendry">GENDRY</string>
    <string name="gilly">GILLY</string>
    <string name="gilly_text">"Gilly is one of the many daughters of Craster, a wildling who lives beyond the Wall. She lives with him at Craster's Keep. As well as being a daughter of Craster, she is one of his wives, as Craster routinely marries his own daughters. At the time of the War of the Five Kings, Craster has nineteen wives, including Gilly. When the Night's Watch encounters her, Gilly is pregnant with the incestuous child of her own father. "</string>
    <string name="jaime">JAIME</string>
    <string name="jaime_text">Ser Jaime Lannister is a knight of the Kingsguard, a position he has held for twenty years since he was a teenager, the youngest Kingsguard ever. He was appointed to the position by the Mad King, Aerys II Targaryen.
\n
\nAt the conclusion of Robert\'s Rebellion, Jaime\'s father Tywin betrayed King Aerys by arriving at the gates of King\'s Landing with the main Lannister army and pleading his allegiance, then after his army was allowed inside the gates, turning them loose to attack the city. As Lannister soldiers raped and pillaged throughout the city during the Sack of King\'s Landing, King Aerys remained holed up inside the Red Keep, for hours maniacally repeating the order to \'burn them all\'. Despite being sworn by the holiest oaths to protect the king as a member of the Kingsguard, Jaime ultimately turned his own sword on Aerys, slaying him at the foot of the Iron Throne itself. For this infamous act, he is known throughout the Seven Kingdoms as \'the Kingslayer\', to his irritation.
\n
\nJaime always refused to discuss precisely what happened the day he slew the Mad King, and thus his true motivations– and what Aerys nearly did to King\'s Landing– were never revealed. On one occasion he confides the truth to Brienne of Tarth: Aerys\' final orders were for Jaime to kill his father, and to burn the entire city and its inhabitants with wildfire. Unwilling to let that happen, Jaime killed him, and in doing so actually saved thousands of innocent lives. He adds that the \'honorable\' Ned Stark judged him guilty immediately, without hearing Jaime\'s reasons.
\n
\nHe was forgiven his breaking of his vows by King Robert Baratheon and permitted to remain in the Kingsguard as part of Robert\'s alliance with House Lannister, along with the marriage of Jaime\'s twin sister Cersei to Robert. In addition to the slaying of the Mad King, Jaime is known for his good looks, arrogant demeanor, and superb martial skills. He is so skilled with a sword that he claims that there are only three men in the seven kingdoms which may have a chance at beating him in a fair duel.
\n
\nJaime is the eldest son of Joanna Lannister and Lord Tywin Lannister. Tywin is the head of House Lannister, the richest man in the Seven Kingdoms and Lord Paramount of the Westerlands. The Westerlands are one of the constituent regions of the Seven Kingdoms and House Lannister is one of the Great Houses of the realm. Jaime had great difficulty learning to read as a child because he transposed letters in his mind. Tywin sat with him through four hour a day practices until he learnt. Jaime resented being forced to spend so much time on reading.
\n
\nJaime is the older brother of Tyrion and the twin brother of Cersei. Their mother died giving birth to Tyrion. Due to his place in the Kingsguard, Jaime cannot inherit his father\'s lands or titles, making Tyrion his father\'s heir; a fact which vexes Tywin. Unlike Cersei and Tywin, Jaime always treated Tyrion with a degree of kindness and respect. In a secret known to only a few, Jaime is Cersei\'s lover and the biological father of her children, Joffrey, Myrcella, and Tommen, whom the world believes are Robert\'s kin.</string>
    <string name="jeor">JEOR MORMONT</string>
    <string name="jeor_text">Jeor Mormont, nicknamed The Old Bear, is the Lord Commander of the Night\'s Watch, leading from his headquarters at the fortress of Castle Black. Jeor Mormont was once the Lord of Bear Island and head of House Mormont until he abdicated his seat in favor of his son, Ser Jorah Mormont, and joined the Night\'s Watch. He rapidly rose through the ranks to become Lord Commander. His son Jorah disgraced himself by selling slaves and fled to the Free Cities, leaving Jeor\'s sister Maege to rule Bear Island</string>
    <string name="joffrey_baratheon">JOFFREY BARATHEON</string>
    <string name="joffrey_text">Joffrey is believed to be the oldest son and heir of King Robert Baratheon and Queen Cersei Lannister, both of whom entered into a political marriage alliance after Robert took the throne by force from the Mad King Aerys II Targaryen. In reality, his father is Jaime Lannister, the queen\'s brother and the Lord Commander of the Kingsguard. He has a younger sister, Myrcella, and a younger brother, Tommen , both whom are also the product of Jaime and Cersei\'s incest. 
\n
\nJoffrey takes after his mother in terms of looks and personality, his blonde hair being a subtle clue that he isn\'t really a Baratheon, who famously always possess black hair even when one of their parents possesses blonde hair. He is usually accompanied by his sworn shield, the formidable Sandor Clegane, who is better known as the Hound. Even before he ascends to the Iron Throne, Joffrey is spoiled, arrogant, cowardly, and sadistic; however these traits are further exacerbated upon Robert\'s death and his ascension to the crown.</string>
    <string name="jon_snow">JON SNOW</string>
    <string name="jon_snow_text">Jon is the bastard son of Lord Eddard Stark of Winterfell, the head of House Stark and Lord Paramount of the North. The North is one of the constituent regions of the Seven Kingdoms in Westeros, and House Stark is one of the Great Houses of the realm. House Stark rules the region from their seat of Winterfell and Eddard also holds the title Lord of Winterfell. He is also the Warden of the North to King Robert Baratheon.
\n
\nEddard once told King Robert Baratheon that Jon\'s mother is a serving girl named Wylla, but refused to elaborate any further. Jon himself has no knowledge of his mother.
\n
\nJon was raised at Winterfell on an equal footing with Eddard\'s legitimate children. He has an older half-brother Robb, two younger half-sisters Sansa and Arya, and two younger half-brothers Bran and Rickon. Jon\'s presence at Winterfell is a source of friction between Eddard and his wife, Catelyn, although Catelyn put aside her anger temporarily when the infant Jon became severely ill. Jon got on well with his half-siblings, particularly Robb and Arya.</string>
    <string name="jorah_mormont">JORAH MORMONT</string>
    <string name="jorah_text">"Jorah Mormont is the son of Jeor Mormont of House Mormont, the Lords of Bear Island and vassals of House Stark in the North. Jorah had a distinguished early career, and participating in the Siege of Pyke during the Greyjoy Rebellion, for which he was knighted by King Robert Baratheon. His father later voluntarily joined the Night's Watch, leaving Jorah as Lord of Bear Island and head of House Mormont.
\n
\nJorah married Lynesse Hightower, but his new wife had expensive tastes which Jorah struggled to fund to make her happy. Ultimately he resorted to selling poachers into slavery, which has been illegal in the Seven Kingdoms for millennia and is a great taboo throughout Westeros. Jorah was caught and disgraced. He was stripped of his Lordship and fled to the Free Cities to avoid being executed by Eddard Stark. He served in mercenary companies such as the Golden Company. His wife eventually left him for another, richer man.
\n
\nHe is called Jorah the Andal by the Dothraki, as they apparently assume that all people from Westeros are Andals. However, Jorah is actually a Northman, descended from the First Men.
\n
\nBesides the Common Tongue of Westeros, Ser Jorah is fluent in the Dothraki language. "</string>
    <string name="khal_drogo">KHAL DROGO</string>
    <string name="khaldrogo_text">Drogo is a khal or warlord of the Dothraki, the famed nomadic horse-lords of the eastern continent beyond the Narrow Sea. The Dothraki are fierce warriors, skilled in battle, unrelenting in combat and known for savagery towards non-Dothraki. Amongst their own people they have a code of honor, albeit still a harsh and unforgiving one. Drogo was very young to have his own khalasar, particularly such a large one. He is a legendary warrior and has never been defeated in battle. Drogo desired the most beautiful and exotic woman in the world as his khaleesi or wife, and enlisted Magister Illyrio Mopatis of Pentos to help him find such a woman.
\n
\nHe is guarded by bloodriders including Qotho. Generals or ko in his khalasar include Pono and Jhaqo, men who guard him, follow him in battle and, when Drogo dies, it is their duty and honor to follow him even then to continue serving him.</string>
    <string name="margaery_tyrell">MARGAERY TYRELL</string>
</resources>