<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

      <RelativeLayout
        android:id="@+id/adsdkContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >
    </RelativeLayout>

    <Button
        android:id="@+id/bStark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/StaHeader"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bTargaryen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/TarHeader"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bTully"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/TullHeader"
        android:textSize="30sp" />

</LinearLayout>